english german wording for shortens combined

--- a/wissdoc.cls
+++ b/wissdoc.cls
@@ -44,6 +44,12 @@
 %% start super class
 \LoadClass[toc=flat]{scrbook} % diese Klasse basiert auf ``scrbook''
 
+%% german language package
+\if@german
+ \RequirePackage{ngerman}
+ \RequirePackage[utf8]{fontenc}      % T1-encoded fonts: auch Wörter mit Umlauten trennen
+\fi
+
 \RequirePackage{ifthen}
 \RequirePackage{ifpdf}
 
@@ -775,25 +781,6 @@ section]      %im Inhaltsverzeichnis auf section-Ebene erscheinen
 \newcommand{\TODO}[1]{*\marginpar{* TODO: #1}}
 \newcommand{\translate}[1]{{\bf \large #1\TODO{Translate #1}}}
 
-
-%% german language package
-\if@german
-      \RequirePackage{ngerman}
-      \RequirePackage[utf8]{fontenc}      % T1-encoded fonts: auch Wörter mit Umlauten trennen
-
-\def\zb{z.\,B.\ } %z.B. 'exempli gratia'
-\def\dh{d.\,h.\ } %d.h. id est'
-\def\su{s.\,u.\ }%siehe unten
-\def\siu{siehe\,unten\ }%siehe unten
-\else
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Wortabkürzungen
-%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\eg{e.\,g.\ } %z.B. 'exempli gratia'
-\def\ie{i.\,e.\ } %d.h. id est'
-\def\vi{vide\,infra\ }%siehe unten
-\fi
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % Index
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -804,5 +791,15 @@ section]      %im Inhaltsverzeichnis auf section-Ebene erscheinen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\glos}[2]{\gls{#1} #2}
 
+%%
+%% std abkuerzungen
+%%
+
+\def\zb{z.\,B.\ } %z.B. 'exempli gratia'
+\def\dh{d.\,h.\ } %d.h. id est'
+\def\su{s.\,u.\ }%siehe unten
+\def\eg{e.\,g.\ } %z.B. 'exempli gratia'
+\def\ie{i.\,e.\ } %d.h. id est'
+\def\vi{siehe\,unten\ }%siehe unten
 
 %% **** END OF CLASS ****
